# CMakeList.txt: FactoryMethod için CMake projesi, kaynağı ekleyin ve tanımlayın
# projeye özgü mantık burada bulunur.
#
cmake_minimum_required (VERSION 3.8)

# Kaynağı bu projenin yürütülebilir dosyasına ekleyin.
add_executable (FactoryMethod "FactoryMethod.cpp" "FactoryMethod.h")

# TODO: Gerekirse testleri ve yükleme hedeflerini ekleyin.
